[package]
authors = ["lhvy <me@lhvy.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "puck"
version = "0.1.0"

[dependencies]
arrayvec = "0.7.1"
drop_bomb = "0.1.5"
la-arena = "0.2.1"
logos = "0.12.0"
mimalloc = {version = "0.1.25", default-features = false}
num-derive = "0.3.3"
num-traits = "0.2.14"
regex = "1.5.4"
rowan = "0.13.2"

[dev-dependencies]
expect-test = "1.1.0"

[profile.release]
codegen-units = 1
lto = "fat"
